# sokol-py

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-sokol.yml  ci.yml  publish.yml
examples/: triangle.py
generator/: .gitignore  generate_bindings.py  setup_and_generate.py
sokol/: __init__.py
sokol/sokol_ahmedaliadeel/: __init__.py
sokol/sokol_ahmedaliadeel/lib/: README.md
tests/: __init__.py  test_bindings.py
