[project]
name = "sokol"
version = "0.1.0"
description = "Python ctypes bindings for the Sokol cross-platform graphics library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ahmed Ali Adeel", email = "ahmedaliadeel@gmail.com" }
]
keywords = [
    "sokol",
    "graphics",
    "opengl",
    "directx",
    "d3d11",
    "metal",
    "vulkan",
    "webgpu",
    "ctypes",
    "bindings",
    "gamedev",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ahmadaliadeel/sokol-py"
Documentation = "https://github.com/ahmadaliadeel/sokol-py#readme"
Repository = "https://github.com/ahmadaliadeel/sokol-py.git"
Issues = "https://github.com/ahmadaliadeel/sokol-py/issues"
Changelog = "https://github.com/ahmadaliadeel/sokol-py/releases"

[dependency-groups]
dev = [
    "libclang>=18.1.1",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sokol"]
include = [
    "sokol/sokol_ahmedaliadeel/lib/*.dll",
    "sokol/sokol_ahmedaliadeel/lib/*.so",
    "sokol/sokol_ahmedaliadeel/lib/*.dylib",
]

[tool.hatch.build.targets.sdist]
include = [
    "sokol/",
    "examples/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
